Add closing quip

--- a/pet-webpage.html
+++ b/pet-webpage.html
@@ -23,5 +23,7 @@
       <li>Eating</li>
       <li>Playing with our owner</li>
     </ol>
+    <h2>You have reached the end</h2>
+    <h1>COME AGAIN!</h1>
   </body>
 </html>
